WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267768
AX: The AccessibilityText property of labeled objects is not updated when the label is removed.
https://bugs.webkit.org/show_bug.cgi?id=267768
Summary
AX: The AccessibilityText property of labeled objects is not updated when the...
Andres Gonzalez
Reported
2024-01-19 08:32:01 PST
.
Attachments
Patch
(5.45 KB, patch)
2024-01-19 08:54 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-19 08:32:11 PST
<
rdar://problem/121259687
>
Andres Gonzalez
Comment 2
2024-01-19 08:54:41 PST
Created
attachment 469459
[details]
Patch
Tyler Wilcock
Comment 3
2024-01-19 11:29:38 PST
Comment on
attachment 469459
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=469459&action=review
> Source/WebCore/accessibility/AXObjectCache.cpp:1079 > - removeRelations(axID); > - > #if ENABLE(ACCESSIBILITY_ISOLATED_TREE) > if (auto tree = AXIsolatedTree::treeForPageID(m_pageID)) > tree->removeNode(*object); > #endif > > + removeRelations(axID);
TW: Just curious, why move this? Just for organization, or is there some logical difference?
Andres Gonzalez
Comment 4
2024-01-19 11:50:10 PST
(In reply to Tyler Wilcock from
comment #3
)
> Comment on
attachment 469459
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=469459&action=review
> > > Source/WebCore/accessibility/AXObjectCache.cpp:1079 > > - removeRelations(axID); > > - > > #if ENABLE(ACCESSIBILITY_ISOLATED_TREE) > > if (auto tree = AXIsolatedTree::treeForPageID(m_pageID)) > > tree->removeNode(*object); > > #endif > > > > + removeRelations(axID); > > TW: Just curious, why move this? Just for organization, or is there some > logical difference?
When we call tree->removeNode, the relationships for the live object still have to be alive in order to get its related objects. So that's why removing the live relations has to be after updating the iso tree. Before it was working because we were not using the relations to get the labeled objects, we were going through the Elements directly.
EWS
Comment 5
2024-01-19 18:15:04 PST
Committed
273251@main
(df75d243cd12): <
https://commits.webkit.org/273251@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 469459
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug